[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/wheels.gd" type="Script" id=1]
[ext_resource path="res://objects/Dynamic test2.gd" type="Script" id=2]
[ext_resource path="res://map-floor-animated.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]

[node name="Dynamic test" type="Node2D"]
script = ExtResource( 2 )

[node name="wheel0" type="KinematicBody2D" parent="." groups=[
"rendersprite",
"sprite",
]]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( -33, -40 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
dontMove = true
dontCollideSprite = true
head_height = 20

[node name="ColArea" type="Area2D" parent="wheel0"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheel0/ColArea"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheel0"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="wheel1" type="KinematicBody2D" parent="." groups=[
"rendersprite",
"sprite",
]]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 33, -40 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
dontMove = true
dontCollideSprite = true
head_height = 20

[node name="ColArea" type="Area2D" parent="wheel1"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheel1/ColArea"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheel1"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="wheel3" type="KinematicBody2D" parent="." groups=[
"rendersprite",
"sprite",
]]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( -33, 45 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
dontMove = true
dontCollideSprite = true
head_height = 20

[node name="ColArea" type="Area2D" parent="wheel3"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheel3/ColArea"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheel3"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="wheel2" type="KinematicBody2D" parent="." groups=[
"rendersprite",
"sprite",
]]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 33, 45 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
dontMove = true
dontCollideSprite = true
head_height = 20

[node name="ColArea" type="Area2D" parent="wheel2"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheel2/ColArea"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheel2"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="base" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.329412, 0.329412, 0.329412, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
heights = [ 9.0, 9.0, 9.0, 9.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="base"]
polygon = PoolVector2Array( -31, -70, 31, -70, 33, 71, -33, 71 )

[node name="top" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.0941176, 0.627451, 1, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
heights = [ 39.0 ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="top"]
polygon = PoolVector2Array( -26, -37, 26, -37, 26, 7, -26, 7 )

[node name="inside" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.329412, 0.329412, 0.329412, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
heights = [ 26.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="inside"]
polygon = PoolVector2Array( -33, -59, 33, -59, 33, 27, -33, 27 )

[node name="hood" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.219608, 0.678431, 1, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
heights = [ 26.0, 21.0, 21.0, 26.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hood"]
polygon = PoolVector2Array( 33, 27, 33, 71, -33, 71, -33, 27 )

[node name="windowsB" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0, 0.666667, 0.666667, 1 )
position = Vector2( 4, -4 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
heights = [ 26.0, 26.0, 39.0, 39.0 ]
onesided = 1
textures_on = true
texture_path = "res://textures/stretchtest.png"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="windowsB"]
polygon = PoolVector2Array( 7.25, 7.75, -9.25, 7.75, -7.5, 2.75, 5.5, 2.75 )

[node name="windowsT" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0, 0.666667, 0.666667, 1 )
position = Vector2( 4, -4 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
heights = [ 26.0, 26.0, 39.0, 39.0 ]
onesided = -1
textures_on = true
texture_path = "res://textures/stretchtest.png"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="windowsT"]
polygon = PoolVector2Array( 7.25, -13.75, -9.25, -13.75, -7.5, -8.25, 5.5, -8.25 )

[node name="trunk" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.219608, 0.678431, 1, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
heights = [ 26.0, 26.0, 26.0, 26.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="trunk"]
polygon = PoolVector2Array( 33, -70, 33, -59, -33, -59, -33, -70 )

[node name="LwheelT" type="StaticBody2D" parent="." groups=[
"render",
]]
position = Vector2( -34, -50 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
heights = [ 0.0, 20.0, 20.0, 0.0 ]
onesided = 1
textures_on = true
UV_textures = true
texture_path = "res://textures/wheelEGA64.png"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LwheelT"]
polygon = PoolVector2Array( 0, 0, 0.25, 0, 0.25, 5, 0, 5 )

[node name="LwheelB" type="StaticBody2D" parent="." groups=[
"render",
]]
position = Vector2( -34, 36 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
heights = [ 0.0, 20.0, 20.0, 0.0 ]
onesided = 1
textures_on = true
UV_textures = true
texture_path = "res://textures/wheelEGA64.png"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LwheelB"]
polygon = PoolVector2Array( 0, 0, 0.25, 0, 0.25, 5, 0, 5 )

[node name="Lside" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0, 0.588235, 1, 1 )
position = Vector2( 2, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
heights = [ 9.0, 26.0, 26.0, 21.0, 9.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Lside"]
polygon = PoolVector2Array( -33, -69, -35, -70, -35, 27, -35, 71, -33, 73 )

[node name="Lwindow" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.00392157, 0.545098, 0.545098, 1 )
position = Vector2( 4, -4 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
heights = [ 26.0, 26.0, 39.0, 39.0 ]
onesided = -1
textures_on = true
texture_path = "res://textures/stretchtest.png"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Lwindow"]
polygon = PoolVector2Array( -9.25, -13.75, -9.25, 7.75, -7.5, 2.75, -7.5, -8.25 )

[node name="LshockT" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
position = Vector2( 4, -118 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
heights = [ 14.0, 14.0, 10.0, 10.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LshockT"]
polygon = PoolVector2Array( -9.5, 17.25, -9.25, 11.75, -9, 11.75, -9.25, 17 )

[node name="LshockB" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
position = Vector2( 4, 120 )
scale = Vector2( 4, -4 )
script = ExtResource( 4 )
heights = [ 14.0, 14.0, 10.0, 10.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LshockB"]
polygon = PoolVector2Array( -9.5, 16.25, -9.25, 11.75, -9, 11.75, -9.25, 16 )

[node name="LlightT" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.988235, 0.329412, 0.329412, 1 )
position = Vector2( 0, -130.5 )
rotation = 3.14159
scale = Vector2( -4, -4 )
script = ExtResource( 4 )
heights = [ 15.0, 21.0, 21.0, 15.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LlightT"]
polygon = PoolVector2Array( -3.5, 15.375, -3.5, 15.125, -7.75, 15.125, -7.75, 15.375 )

[node name="LturnT" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.988235, 0.988235, 0.329412, 1 )
position = Vector2( 0, -130.5 )
rotation = 3.14159
scale = Vector2( -4, -4 )
script = ExtResource( 4 )
heights = [ 15.0, 21.0, 21.0, 15.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LturnT"]
polygon = PoolVector2Array( -8, 15.625, -8.25, 15.625, -7.75, 15.125, -7.75, 15.375 )

[node name="LlightB" type="StaticBody2D" parent="." groups=[
"render",
]]
position = Vector2( 0, 11.5 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
heights = [ 14.0, 19.0, 19.0, 14.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LlightB"]
polygon = PoolVector2Array( -3.5, 15.375, -3.75, 15.125, -7.75, 15.125, -7.75, 15.375 )

[node name="LturnB" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.988235, 0.988235, 0.329412, 1 )
position = Vector2( 0, 11.5 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
heights = [ 14.0, 19.0, 19.0, 14.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LturnB"]
polygon = PoolVector2Array( -8.25, 14.875, -8, 14.875, -7.75, 15.125, -7.75, 15.375 )

[node name="RwheelT" type="StaticBody2D" parent="." groups=[
"render",
]]
position = Vector2( 34, -50 )
rotation = 3.14159
scale = Vector2( 4, -4 )
script = ExtResource( 4 )
heights = [ 0.0, 20.0, 20.0, 0.0 ]
onesided = -1
textures_on = true
UV_textures = true
texture_path = "res://textures/wheelEGA64.png"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RwheelT"]
polygon = PoolVector2Array( 0, 0, 0.25, 0, 0.25, 5, 0, 5 )

[node name="RwheelB" type="StaticBody2D" parent="." groups=[
"render",
]]
position = Vector2( 34, 36 )
rotation = 3.14159
scale = Vector2( 4, -4 )
script = ExtResource( 4 )
heights = [ 0.0, 20.0, 20.0, 0.0 ]
onesided = -1
textures_on = true
UV_textures = true
texture_path = "res://textures/wheelEGA64.png"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RwheelB"]
polygon = PoolVector2Array( 0, 0, 0.25, 0, 0.25, 5, 0, 5 )

[node name="Rside" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0, 0.588235, 1, 1 )
position = Vector2( -2, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
script = ExtResource( 4 )
heights = [ 9.0, 26.0, 26.0, 21.0, 9.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rside"]
polygon = PoolVector2Array( -33, -69, -35, -70, -35, 27, -35, 71, -33, 73 )

[node name="Rwindow" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.00392157, 0.545098, 0.545098, 1 )
position = Vector2( -4, -4 )
rotation = 3.14159
scale = Vector2( 4, -4 )
script = ExtResource( 4 )
heights = [ 26.0, 26.0, 39.0, 39.0 ]
onesided = 1
textures_on = true
texture_path = "res://textures/stretchtest.png"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rwindow"]
polygon = PoolVector2Array( -9.25, -13.75, -9.25, 7.75, -7.5, 2.75, -7.5, -8.25 )

[node name="RshockT" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
position = Vector2( -4, -118 )
rotation = 3.14159
scale = Vector2( 4, -4 )
script = ExtResource( 4 )
heights = [ 14.0, 14.0, 10.0, 10.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RshockT"]
polygon = PoolVector2Array( -9.5, 17.25, -9.25, 11.75, -9, 11.75, -9.25, 17 )

[node name="RshockB" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
position = Vector2( -4, 120 )
rotation = 3.14159
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
heights = [ 14.0, 14.0, 10.0, 10.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RshockB"]
polygon = PoolVector2Array( -9.5, 16.25, -9.25, 11.75, -9, 11.75, -9.25, 16 )

[node name="RlightT" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.988235, 0.329412, 0.329412, 1 )
position = Vector2( 0, -130.5 )
rotation = 3.14159
scale = Vector2( 4, -4 )
script = ExtResource( 4 )
heights = [ 15.0, 21.0, 21.0, 15.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RlightT"]
polygon = PoolVector2Array( -3.5, 15.375, -3.5, 15.125, -7.75, 15.125, -7.75, 15.375 )

[node name="RturnT" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.988235, 0.988235, 0.329412, 1 )
position = Vector2( 0, -130.5 )
rotation = 3.14159
scale = Vector2( 4, -4 )
script = ExtResource( 4 )
heights = [ 15.0, 21.0, 21.0, 15.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RturnT"]
polygon = PoolVector2Array( -8, 15.625, -8.25, 15.625, -7.75, 15.125, -7.75, 15.375 )

[node name="RlightB" type="StaticBody2D" parent="." groups=[
"render",
]]
position = Vector2( 0, 11.5 )
rotation = 3.14159
scale = Vector2( 4, -4 )
script = ExtResource( 4 )
heights = [ 14.0, 19.0, 19.0, 14.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RlightB"]
polygon = PoolVector2Array( -3.5, 15.375, -3.75, 15.125, -7.75, 15.125, -7.75, 15.375 )

[node name="RturnB" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.988235, 0.988235, 0.329412, 1 )
position = Vector2( 0, 11.5 )
rotation = 3.14159
scale = Vector2( 4, -4 )
script = ExtResource( 4 )
heights = [ 14.0, 19.0, 19.0, 14.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RturnB"]
polygon = PoolVector2Array( -8.25, 14.875, -8, 14.875, -7.75, 15.125, -7.75, 15.375 )

[node name="back" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.141176, 0.643137, 1, 1 )
position = Vector2( 0, -1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
heights = [ 26.0, 9.0, 9.0, 26.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="back"]
polygon = PoolVector2Array( 33, -69, 31, -68, -31, -68, -33, -69 )

[node name="front" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.317647, 0.717647, 1, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
heights = [ 9.0, 21.0, 21.0, 9.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="front"]
polygon = PoolVector2Array( 31, 73, 33, 71, -33, 71, -31, 73 )

[node name="shockB" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.294118, 0.294118, 0.294118, 1 )
position = Vector2( 4, 122 )
scale = Vector2( 4, -4 )
script = ExtResource( 4 )
heights = [ 14.0, 10.0, 10.0, 14.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="shockB"]
polygon = PoolVector2Array( -9.25, 12.25, -9, 12.25, 7, 12.25, 7.25, 12.25 )

[node name="shockT" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.294118, 0.294118, 0.294118, 1 )
position = Vector2( 4, -120 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
heights = [ 14.0, 10.0, 10.0, 14.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="shockT"]
polygon = PoolVector2Array( -9.25, 12.25, -9, 12.25, 7, 12.25, 7.25, 12.25 )

[node name="signB" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.658824, 0.658824, 0.658824, 1 )
position = Vector2( -46, 88 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
heights = [ 15.0, 15.0, 10.0, 10.0 ]
onesided = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="signB"]
modulate = Color( 0.658824, 0.658824, 0.658824, 1 )
polygon = PoolVector2Array( 13.25, -3.25, 9.75, -3.25, 9.75, -3.5, 13.25, -3.5 )

[node name="signT" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.643137, 0.643137, 0.643137, 1 )
position = Vector2( 25, -100 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
heights = [ 16.0, 21.0, 21.0, 16.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="signT"]
scale = Vector2( 1, 0.5 )
polygon = PoolVector2Array( -4.5, 15.25, -4.5, 15, -8, 15, -8, 15.25 )

[node name="air" type="StaticBody2D" parent="." groups=[
"render",
]]
modulate = Color( 0.152941, 0.152941, 0.152941, 1 )
position = Vector2( 0, 11.5 )
scale = Vector2( 4, 4 )
script = ExtResource( 4 )
heights = [ 14.0, 19.0, 19.0, 14.0 ]
onesided = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="air"]
modulate = Color( 0.243137, 0.243137, 0.243137, 1 )
polygon = PoolVector2Array( -3.5, 15.375, -3.75, 15.125, 3.75, 15.125, 3.5, 15.375 )

[connection signal="body_shape_entered" from="wheel0/ColArea" to="wheel0" method="_on_ColArea_body_shape_entered"]
[connection signal="body_shape_exited" from="wheel0/ColArea" to="wheel0" method="_on_ColArea_body_shape_exited"]
[connection signal="body_shape_entered" from="wheel1/ColArea" to="wheel1" method="_on_ColArea_body_shape_entered"]
[connection signal="body_shape_exited" from="wheel1/ColArea" to="wheel1" method="_on_ColArea_body_shape_exited"]
[connection signal="body_shape_entered" from="wheel3/ColArea" to="wheel3" method="_on_ColArea_body_shape_entered"]
[connection signal="body_shape_exited" from="wheel3/ColArea" to="wheel3" method="_on_ColArea_body_shape_exited"]
[connection signal="body_shape_entered" from="wheel2/ColArea" to="wheel2" method="_on_ColArea_body_shape_entered"]
[connection signal="body_shape_exited" from="wheel2/ColArea" to="wheel2" method="_on_ColArea_body_shape_exited"]
